--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,17 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // CameraX core library
+    implementation "androidx.camera:camera-core:1.4.0-alpha03"
+    implementation "androidx.camera:camera-camera2:1.4.0-alpha03"
+    implementation "androidx.camera:camera-lifecycle:1.4.0-alpha03"
+    implementation "androidx.camera:camera-view:1.4.0-alpha03"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+
+    // Barcode scanner
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 }
