--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
-
 
     <application
         android:allowBackup="true"
@@ -13,9 +13,13 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+        android:theme="@style/Theme.Pillai"
         tools:targetApi="31">
+        <activity
+            android:name=".DrugInfoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_drug_info"
+            android:theme="@style/Theme.Pillai.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
